# FYP-QnAce-Main-Repo

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEPLOYMENT.md  DEPLOYMENT_NEXT_STEPS.md  DEPLOYMENT_PLAN.md  Dockerfile  Dockerfile.railway  GITHUB_DEPLOY.md  IMPLEMENTATION_PLAN.md  Interview_Dataset.csv  PROJECT_MEMORY.md  README.md  RENDER_DEPLOY.md  VERCEL_FRONTEND_DEPLOY.md  _install_flash_attn.cmd  architecture.md  debug_backend.py  decisions.md  deploy.sh  docker-compose.yml  dsa_final_a_plus.json  evaluate_model.py  mcq_networks.json  package-lock.json  railway-start.sh  railway.json  render.yaml  requirements.txt  start.ps1  start.sh
server/: Dockerfile  pyproject.toml  requirements.txt
server/app/: auth.py  coaching.py  config.py  main.py  notes_chat.py  personalization.py  preparation.py
server/app/coding/: __init__.py  json_utils.py  judge0_client.py  routes.py  supabase_data.py
server/app/intelligence/: completeness.py  coverage.py  cv.py  interviewer.py  llm.py  question_bank.py  rag.py  scoring.py  session_stages.py
server/app/models/: __init__.py  registry.py
server/app/perception/: face.py  orchestrator.py  stt.py  text_quality.py  vocal.py
server/app/runtime/: __init__.py  cudnn_guard.py
server/app/synthesis/: avatar.py  backchannel.py  punctuation_buffer.py  tts.py
server/app/vad/: ring_buffer.py  semantic_turn_detector.py  silero.py
server/app/webrtc/: cv_routes.py  data_channel.py  report_routes.py  (+2 more)
server/tests/: test_backchannel.py  test_coding_json_utils.py  test_completeness.py  test_coverage.py  test_finality.py
(+203 files in other folders)
